[package]
name = "snew"
version = "0.1.0"
authors = ["Eirik Tobiassen <eirtob98@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.126", features=["derive"]}
serde_json = "1.0.64"
reqwest = {version = "0.11.3", features=["json", "blocking", "gzip"]}
thiserror = "1.0.25"
base64 = "0.13.0"
bytes = { version = "1.1.0", optional = true }

[features]
parse_content = ["bytes"]

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]